working API with authentication. still missing CSRF protection and edge case error handling (e.g. when no cookie jar passed to call that requires them)

--- a/config/development.config.json
+++ b/config/development.config.json
@@ -12,8 +12,14 @@
         "source": "mysql",
         "dbConfig": {
             "host": "localhost",
-            "database": "soccr",
+            "database": "crowdictionary",
             "connectionLimit": 10
+        }
+    },
+    "cookies": {
+        "user": {
+            "name": "U",
+            "secrets": ""
         }
     }
 }
