--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "repository": "TODO",
   "README": "TODO",
   "devDependencies": {
-    "browserify": "4.2.0",
+    "browserify": "^4.2.0",
     "chai-as-promised": "^4.1.1",
+    "crypto-browserify": "^2.1.8",
     "envify": "^1.2.1",
     "grunt": "^0.4.5",
     "grunt-bower-install-simple": "^0.9.2",
@@ -24,8 +25,9 @@
   },
   "dependencies": {
     "koa": "^0.6.1",
+    "koa-body-parser": "^1.1.0",
     "koa-mount": "^1.3.0",
-    "koa-router": "^3.1.4",
+    "koa-router": "^3.2.1",
     "koa-static": "^1.4.5",
     "lodash": "^2.4.1",
     "mysql": "^2.3.2",
